--- a/Develop/views/login.handlebars
+++ b/Develop/views/login.handlebars
@@ -1,17 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 
 
 
-<body>
-    
-</body>
+<div class='container'>
+  <br /><br /><br />
+  <div class='row'>
+    <div class='input-field col s12'>
+      <input id='email' type='email' class='validate' />
+      <label for='email'>Email</label>
+    </div>
+  </div>
+  <div class='row'>
+    <input id='password' type='password' class='validate' />
+    <label for='password'>password</label>
+  </div>
+</div>
 
-
-</html>
+<!-- buttons -->
+<div class='row'>
+  <div class='col s12'>
+    <a href='/register' class='waves-effect waves-light btn-large'>Register</a>
+  </div>
+</div>
