--- a/Develop/views/layouts/html/login.html
+++ b/Develop/views/layouts/html/login.html
@@ -1,23 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Develop/views/layouts/css/style.css">
+    <title>Document</title>
+</head>
 
+<body>
 
-<div class="container">
-    <br><br><br>
-    <div class="row">
-        <div class="input-field col s12">
-            <input id="email" type="email" class="validate">
-            <label for="email">Email</label>
+    <div class="container">
+        <br><br><br>
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+            </div>
+        </div>
+        <div class="row">
+            <input id="password" type="password" class="validate">
+            <label for="password">password</label>
         </div>
     </div>
-    <div class="row">
-        <input id="password" type="password" class="validate">
-        <label for="password">password</label>
-    </div>
-</div>
 
-<!-- buttons -->
-<div class="row">
-    <div class="col s12">
-        <a href="/register" class="waves-effect waves-light btn-large">Register</a> 
+    <!-- buttons -->
+    <div class="row">
+        <div class="col s12">
+            <a href="/register" class="waves-effect waves-light btn-large">Register</a>
+        </div>
     </div>
-</div>
+
+
+</body>
+
+</html>
