--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -1,29 +1,19 @@
-<html>
 
-  <head>
-    <meta charset='utf-8' />
-    <link
-      rel='stylesheet'
-      href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css'
-      integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l'
-      crossorigin='anonymous'
-    />
-    <link rel='stylesheet' href='/styles/styles.css' />
-  </head>
+   
+<!DOCTYPE html>
+<html lang="en">
+{{> head}}
 
-  <body>
-    <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
-    <script
-      src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js'
-      integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1'
-      crossorigin='anonymous'
-    ></script>
-    <script
-      src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'
-      integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM'
-      crossorigin='anonymous'
-    ></script>
-    {{{body}}}
-  </body>
+	<body>
+       
+		{{{ body }}}
 
+
+
+  <!--  Scripts-->
+
+  {{!--<script src="assets/js/apiairvisual.js"></script>--}}
+  <script src="assets/js/init.js"></script>
+
+	</body>
 </html>
