--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,35 @@
+<html lang='en'>
 
-   
-<!DOCTYPE html>
-<html lang="en">
-{{> head}}
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>User Registry</title>
+    <link rel='stylesheet' href='/css/jass.css' />
+  </head>
 
-	<body>
-       
-		{{{ body }}}
+  <body>
+    <header class='display-flex justify-space-between align-center p-2'>
+      <h1>
+        User Registry
+      </h1>
+      {{#if logged_in}}
+        <nav>
+          <button class='btn' id='logout'>logout</button>
+        </nav>
+      {{/if}}
+    </header>
+    <main class='container container-fluid mt-5'>
+      {{{body}}}
+    </main>
+    <footer>
 
+    </footer>
 
+    {{#if logged_in}}
+      <script src='/js/logout.js'></script>
+    {{/if}}
+    <script src='/js/search.js'></script>
+    <script src='assets/js/init.js'></script>
+  </body>
 
-  <!--  Scripts-->
-
-  {{!--<script src="assets/js/apiairvisual.js"></script>--}}
-  <script src="assets/js/init.js"></script>
-
-	</body>
 </html>
