Added html components to details.handlebars

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -4,9 +4,9 @@
     </div>
     <div class="d-flex justify-content-center">
       <button type="button" id="savedSearches">Saved Searches</button>
-      <button type="button" id="clearSearches">Clear Saved Searches</button>
+      <button type="button" id="clearSearches">Cleared Searches</button>
     </div>
-    <!-- Will need to dynamically populate movie cards here -->
+    <!-- Will need to dynamically populate movie cards and what info we're providing here -->
     <!-- <div class="d-flex justify-content-center" id="card-container"></div> -->
 
     <div class="d-flex justify-content-center">
@@ -24,6 +24,5 @@
     <div class="d-flex justify-content-center">
       <button type="button" id="searchPrompt">Search for Movie by Title</button>
       <input type="text" id="movieTitle" value="Enter Movie Title..."></input>
-      <button type="submit" id="movieSubmission">Submit</button>
     </div>
   
