adding handlebar fav route

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,5 +1,5 @@
     <div class="d-flex justify-content-between" id="top-row">
-      <img src="./search/logo.png">
+      {{!-- <img src="./search/logo.png"> --}}
       <button type="button" id="logout">Log Out</button>
     </div>
     <div class="d-flex justify-content-center">
@@ -23,6 +23,6 @@
     </div>
     <div class="d-flex justify-content-center">
       <button type="button" id="searchPrompt">Search for Movie by Title</button>
-      <input type="text" id="movieTitle" value="Enter Movie Title..."></input>
+      <input type="text" id="movieTitle" placeholder="Enter Movie Title..."></input>
     </div>
   
