--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,22 @@
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>User Registry</title>
-    <link rel='stylesheet' href='/css/jass.css' />
+    <!-- CSS only -->
+    <link
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css'
+      rel='stylesheet'
+      integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3'
+      crossorigin='anonymous'
+    />
+    <link rel='stylesheet' href='/styles/style.css' />
+
   </head>
 
   <body>
     <header class='display-flex justify-space-between align-center p-2'>
       <h1>
-        User Registry
+        {{h1value}}
+
       </h1>
       {{#if logged_in}}
         <nav>
@@ -29,7 +38,7 @@
       <script src='/js/logout.js'></script>
     {{/if}}
     <script src='/js/search.js'></script>
-    <script src='assets/js/init.js'></script>
+    {{! <script src='assets/js/init.js'></script> }}
   </body>
 
 </html>
