--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,28 +1,8 @@
-<div class='row'>
-  <div class='col-sm-6'>
-    <div class='card'>
-
-      <div class='card-body'>
-        <h5 class='card-title'>movie title</h5>
-        <p class='card-text'>Movie description </p>
-        <a href='#' class='btn btn-primary'>Go somewhere</a>
-      </div>
-      <div class='image'>
-        <img class='card-img' src='...' alt='Card image' />
-      </div>
-    </div>
-  </div>
-
-  <div class='col-sm-6'>
-    <div class='card'>
-      <div class='image'>
-        <img class='card-img' src='...' alt='Card image' />
-      </div>
-      <div class='card-body'>
-        <h5 class='card-title'>movie title</h5>
-        <p class='card-text'>Movie description</p>
-        <a href='#' class='btn btn-primary'>Go somewhere</a>
-      </div>
-    </div>
-  </div>
-</div>
+<section class="container">
+  <h3 class="movie-name">{{movie.name}}</h3>
+  <section class="flex-row justify-center">
+    {{#each movies as |movie|}}
+    {{> fav-block}}
+    {{/each}}
+  </section>
+</section>
