--- a/views/details.handlebars
+++ b/views/details.handlebars
@@ -1,14 +1,14 @@
-<div class="d-flex justify-content-between" id="top-row">
-    <img src="./logo.png">
-    <button type="button" id="logout">Log Out</button>
+<div class='d-flex justify-content-between' id='top-row'>
+  <img src='./logo.png' />
+  <button type='button' id='logout'>Log Out</button>
 </div>
-<div class="d-flex justify-content-center">
-    <button type="button" id="details">Movie Details</button>
-    <button type="button" id="homeButton">Home</button>
+<div class='d-flex justify-content-center'>
+  <button type='button' id='details'>Movie Details</button>
+  <button type='button' id='homeButton'>Home</button>
 </div>
 
 <!-- We'll need to dynamically populate everything here from our OMDB API -->
 
-<div class="d-flex justify-content-center">
-    <button type="button" id="return">Return to Home</button>
+<div class='d-flex justify-content-center'>
+  <button type='button' id='return'>Return to Home</button>
 </div>
