--- a/views/partials/fav-block.handlebars
+++ b/views/partials/fav-block.handlebars
@@ -1,14 +1,15 @@
 <div class='row'>
   <div class='col-sm-6'>
     <div class='card'>
-
-      <div class='card-body'>
-        <h5 class='card-title'>{{movie title}}</h5>
-        <p class='card-text'>{{variable from the movie api}} </p>
-        <a href='#' class='btn btn-primary'>Go</a>
-      </div>
       <div class='image'>
         <img class='card-img' src='{{movie}}' alt='Card image' />
+      </div>
+      <div class='card-body'>
+        <h5 class='card-title'>{{movie title}}</h5>
+        <p class='card-text'>{{release date}} </p>
+        <p class='card-text'>{{overview}} </p>
+        <p class='card-text'>{{votes}} / 10 (Out of {{vote count}}) </p>
+        <a href='#' class='btn btn-primary'>Go</a>
       </div>
     </div>
   </div>
