--- a/public/styles/loginSignup.css
+++ b/public/styles/loginSignup.css
@@ -8,19 +8,18 @@ body.my-login-page {
   font-size: 14px;
 }
 
-.my-login-page .brand {
-  width: 90px;
-  height: 90px;
-  overflow: hidden;
-  border-radius: 50%;
-  margin: 40px auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+/* .my-login-page .brand {
+  width: 128px;
+  height: 128px;
+  margin: -35px auto;
   position: relative;
-  z-index: 1;
-}
+} */
 
-.my-login-page .brand img {
-  width: 100%;
+.brand img {
+  width: 400px;
+  height: 400px;
+  margin: -100px auto;
+  position: relative;
 }
 
 .my-login-page .card-wrapper {
