--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,28 +1,71 @@
     <div class="d-flex justify-content-between" id="top-row">
-      {{!-- <img src="./search/logo.png"> --}}
-      <button type="button" id="logout">Log Out</button>
+            <div class='searchBrand'>
+              <img src='/images/logo.png' alt='Movie Mania Logo' />
+            </div>
+      <button type="button" class="btn btn-light" id="logout">Log Out</button>
     </div>
+    </br>
+    </br>
     <div class="d-flex justify-content-center">
-      <button type="button" id="savedSearches">Saved Searches</button>
-      <button type="button" id="clearSearches">Cleared Searches</button>
+      <div class="col-7" id="savedSearches">Saved Searches</div>
+      <button type="button" class="col-4" id="clearSearches">Clear Favorites</button>
     </div>
+
     <!-- Will need to dynamically populate movie cards and what info we're providing here -->
-    <!-- <div class="d-flex justify-content-center" id="card-container"></div> -->
+
+    <div class="d-flex favorites" id="card-container">
+      <div class="card" style="height: 35rem; width: 18rem;">
+        <img src="../images/notavail.png">
+        <div class="card-body">
+        <h5 class="card-title">Movie Title</h5>
+        <p class="card-text">Release Date.</p>
+        <p class="card-text">Movie details about the movie .</p>
+        <div class="clk heart">
+          <button class="btn btn-primary container-fluid"><i class="far fa-heart"></i></button>
+        </div>  
+      </div>
+      </div><div class="card" style="height: 35rem; width: 18rem;">
+        <img src="../images/notavail.png">
+        <div class="card-body">
+        <h5 class="card-title">Movie Title</h5>
+        <p class="card-text">Release Date.</p>
+        <p class="card-text">Movie details about the movie .</p>
+        <div class="clk heart">
+          <button class="btn btn-primary container-fluid"><i class="far fa-heart"></i></button>
+        </div>  
+      </div>
+      </div><div class="card" style="height: 35rem; width: 18rem;">
+        <img src="../images/notavail.png">
+        <div class="card-body">
+        <h5 class="card-title">Movie Title</h5>
+        <p class="card-text">Release Date.</p>
+        <p class="card-text">Movie details about the movie .</p>
+        <div class="clk heart">
+          <button class="btn btn-primary container-fluid"><i class="far fa-heart"></i></button>
+        </div>      
+      </div>
+      </div>
+      
+    </div>
+
+    <!-- DELETE EVERYTHING ABOVE ONCE API IS LINKED PROPERLY -->
 
     <div class="d-flex justify-content-center">
-      <button type="button" class="genreButton" id="family">Family</button>
-      <button type="button" class="genreButton" id="action">Action</button>
+      <button type="button" class="genreButton col-3" id="family" onclick="familySearch();">Family</button>
+      <button type="button" class="genreButton col-3" id="action" onclick="actionSearch();">Action</button>
     </div>
     <div class="d-flex justify-content-center">
-      <button type="button" class="genreButton" id="horror">Horror</button>
-      <button type="button" class="genreButton" id="drama">Drama</button>
+      <button type="button" class="genreButton col-3" id="horror" onclick="horrorSearch();">Horror</button>
+      <button type="button" class="genreButton col-3" id="drama" onclick="dramaSearch();">Drama</button>
     </div>
     <div class="d-flex justify-content-center">
-      <button type="button" class="genreButton" id="comedy">Comedy</button>
-      <button type="button" class="genreButton" id="romance">Romance</button>
+      <button type="button" class="genreButton col-3" id="comedy" onclick="comedySearch();">Comedy</button>
+      <button type="button" class="genreButton col-3" id="romance" onclick="romanceSearch();">Romance</button>
     </div>
+    </br>
+    </br>
     <div class="d-flex justify-content-center">
-      <button type="button" id="searchPrompt">Search for Movie by Title</button>
-      <input type="text" id="movieTitle" placeholder="Enter Movie Title..."></input>
+      <input type="text" class="col-2" id="movie_input" placeholder="Enter Movie Title..."></input>
+      <button type="button" class="col-2" id="movie_search" onclick="movieSearch();">Search for Movie by Title</button>
     </div>
   
