--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,7 +28,7 @@
                   <div class='form-group'>
                     <label for='email'>E-Mail Address</label>
                     <input
-                      id='email'
+                      id='email-login'
                       type='email'
                       class='form-control'
                       name='email'
@@ -48,7 +48,7 @@
                       </a>
                     </label>
                     <input
-                      id='password'
+                      id='password-login'
                       type='password'
                       class='form-control'
                       name='password'
