--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -29,7 +29,7 @@
                   <div class='form-group'>
                     <label for='name'>Username</label>
                     <input
-                      id='name'
+                      id='name-signup'
                       type='text'
                       class='form-control'
                       name='name'
@@ -44,7 +44,7 @@
                   <div class='form-group'>
                     <label for='email'>E-Mail Address</label>
                     <input
-                      id='email'
+                      id='email-signup'
                       type='email'
                       class='form-control'
                       name='email'
@@ -58,7 +58,7 @@
                   <div class='form-group'>
                     <label for='password'>Password</label>
                     <input
-                      id='password'
+                      id='password-signup'
                       type='password'
                       class='form-control'
                       name='password'
