--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -118,7 +118,7 @@
       crossorigin='anonymous'
     ></script>
 
-    <script src='../public/js/login.js'></script>
+    <script src='/js/login.js'></script>
 
   </body>
 
