--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,7 +2,7 @@
             <a href="search" class='searchBrand'>
               <img src='/images/logo.png' alt='Movie Mania Logo' />
             </a>
-      <button type="button" class="btn btn-light" id="logout">Log Out</button>
+      <button type="button" class="btn btn-light" id="logout" onclick="logout()">Log Out</button>
     </div>
     </br>
     </br>
