--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -29,7 +29,7 @@
             <div class='card fat'>
               <div class='card-body'>
                 <h4 class='card-title'>Register</h4>
-                <form method='POST' class='my-login-validation' novalidate=''>
+                <form method='POST' class='my-login-validation' onsubmit="signupFormHandler(event)">
                   <div class='form-group'>
                     <label for='name'>Username</label>
                     <input
@@ -76,11 +76,11 @@
 
                   <div class='form-group m-0'>
 
-                    <a href='register'>
+              
                       <button type='submit' class='btn btn-primary btn-block'>
                         Register
                       </button>
-                    </a>
+                  
                   </div>
                   <div class='mt-4 text-center'>
                     Already have an account?
@@ -109,7 +109,7 @@
       crossorigin='anonymous'
     ></script>
 
-    <script src='/js/index.js'></script>
+    <script src='/js/signup.js'></script>
 
   </body>
 
