--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,3 +1,18 @@
+<div class="d-flex justify-content-between" id="top-row">
+    <a href="search" class='searchBrand'>
+      <img src='/images/logo.png' alt='Movie Mania Logo' />
+    </a>
+    <button type="button" class="btn btn-light" id="logout" onclick="logout()">Log Out</button>
+</div>
+
+</br>
+</br>
+
+<div class="d-flex justify-content-center">
+  <div class="col-7" id="savedSearches">Saved Searches</div>
+  <button type="button" class="col-4" id="clearSearches">Clear Favorites</button>
+</div>
+
 <section class="container">
   <h3 class="movie-name">{{movie.name}}</h3>
   <section class="flex-row justify-center">
