--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -108,7 +108,7 @@
       integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM'
       crossorigin='anonymous'
     ></script>
-
+<!--maybe-->
     <script src='/js/signup.js'></script>
 
   </body>
